--- a/part-03/phonebook/package.json
+++ b/part-03/phonebook/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "start": "node .",
     "dev": "nodemon .",
+    "build:ui": "rm -rf dist && npm run --prefix ../../part-02/phonebook build && cp -r ../../part-02/phonebook/dist .",
+    "deploy": "fly deploy",
+    "deploy:full": "npm run build:ui && npm run deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
