--- a/part-03/phonebook/package.json
+++ b/part-03/phonebook/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf dist && npm run --prefix ../../part-02/phonebook build && cp -r ../../part-02/phonebook/dist .",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -21,6 +22,8 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.7",
+    "@stylistic/eslint-plugin-js": "^2.1.0",
+    "eslint": "^8",
     "nodemon": "^3.1.0"
   }
 }
