--- a/part-04/bloglist/package.json
+++ b/part-04/bloglist/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node .",
     "dev": "nodemon .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test"
   },
   "dependencies": {
     "cors": "^2.8.5",
