--- a/part-04/bloglist/package.json
+++ b/part-04/bloglist/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "cross-env NODE_ENV=production node .",
+    "start:test": "cross-env NODE_ENV=test node .",
     "dev": "cross-env NODE_ENV=development nodemon .",
     "test": "cross-env NODE_ENV=test node --test"
   },
