--- a/part-07/bloglist-frontend/package.json
+++ b/part-07/bloglist-frontend/package.json
@@ -13,6 +13,8 @@
     "prettier:write": "prettier . --write"
   },
   "dependencies": {
+    "@mantine/core": "^7.12.2",
+    "@tabler/icons-react": "^3.15.0",
     "@tanstack/react-query": "^5.55.0",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
@@ -32,6 +34,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jsdom": "^25.0.0",
+    "postcss": "^8.4.45",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.3",
     "vite": "^4.4.5",
     "vitest": "^2.0.5"
