--- a/part-08/library-backend/package.json
+++ b/part-08/library-backend/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.0",
-    "graphql": "^16.9.0"
+    "graphql": "^16.9.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
