--- a/part-08/library-backend/package.json
+++ b/part-08/library-backend/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "@graphql-tools/schema": "^10.0.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.20.0",
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "mongoose-unique-validator": "^5.0.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
