--- a/part-08/library-backend/package.json
+++ b/part-08/library-backend/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "graphql": "^16.9.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "mongoose-unique-validator": "^5.0.1",
