--- a/part-09/first-steps/package.json
+++ b/part-09/first-steps/package.json
@@ -2,7 +2,8 @@
   "name": "first-steps",
   "version": "0.0.0",
   "scripts": {
-    "calculateBmi": "ts-node bmiCalculator.ts"
+    "calculateBmi": "ts-node bmiCalculator.ts",
+    "calculateExercises": "ts-node exerciseCalculator.ts"
   },
   "author": "",
   "license": "ISC",
