--- a/part-09/first-steps/tsconfig.json
+++ b/part-09/first-steps/tsconfig.json
@@ -1,6 +1,16 @@
 {
   "compilerOptions": {
     "noImplicitAny": true,
-    "moduleDetection": "force"
+    "moduleDetection": "force",
+    "noImplicitReturns": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "strictBindCallApply": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "esModuleInterop": true,
+    "declaration": true
   }
 }
