--- a/part-09/patientor-backend/package.json
+++ b/part-09/patientor-backend/package.json
@@ -13,7 +13,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
@@ -21,6 +22,7 @@
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.12.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2",
